refactor: simplify timer logic, remove unused method, and clean up related CSS class